--- a/src/components/HomePage/style/FilterPrice.css
+++ b/src/components/HomePage/style/FilterPrice.css
@@ -16,6 +16,7 @@
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     padding-left: 1em;
+    outline: none;
 }
 .from__btn-price{
     margin-top: 1em;
@@ -24,4 +25,18 @@
     background-color: #f85555;  
     color: white;
     font-size: 1.1em; 
+}
+
+@media (max-width: 845px) {
+    .from__lable-price{
+       color: white;
+    }
+    .from__btn-price{
+        background-color: #a2a2a2;   
+        transition: filter 0.5s, color 0.5s ;     
+    }
+    .from__btn-price:hover{
+        filter: brightness(1.50);
+        color: #f85555;
+    }
 }
